microk8s/kubernetes-dashboard/old/tls-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-prod
#    kubernetes.io/ingress.class: "nginx"
#    ingress.kubernetes.io/add-base-url: "true"
#    nginx.ingress.kubernetes.io/secure-backends: "true"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ingressClassName: public
  tls:
    - hosts:
        - dashboard.jdwkube.com
      secretName: kubernetes-dashboard-tls
  rules:
    - host: dashboard.jdwkube.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-web
                port:
                  number: 443
